Created end to end batch tests